# RepoPlantas

./: .dockerignore  .env  .env.docker.example  .gitignore  Dockerfile  Etiquetas  README.md  README_APP.md  README_APP_EN.md  README_APP_ES.md  README_EN.md  README_ES.md  README_actualizado.md  codigos_tipo_datos  docker-compose.yml  etiquetas.ods  etiquetas_insertar.json  importar.py  logicav3.py  main.py  main_app.py  package-linux.ps1  process_imported_images.py  pyproject.toml  release.jks  requirements.txt  run-linux-wsl.ps1  run_server.py  subir_imagenes_nueva_fuente.py  test.py
docs/: DESARROLLO.md  DOCKER.md  USUARIO.md  demo_db_minima_compass.js  estructura_memoria_tfg.tex  guia_usuario.docx
experiments/: config_draft.yaml  run_experiment.py
experiments/prueba/: config.yaml  run_experiment.py
notebooks/: Comprobaciones_imagenes.ipynb  EDA.ipynb  EDA_y_Visualizacion_Completo.ipynb  Untitled-1.ipynb  misclassified_and_topk.ipynb  preparar_split.ipynb  resultados.ipynb
notebooks/legacy/: entrenar_modelo.ipynb
scripts/: add_class.py  backup_mongo.sh  compare_experiments.py  convert_to_grayscale.py  editar_clases.py  make_experiment.py  predict_image.py  process_imported_images.py  reemplazar_clases.py  setup_bbdd.py  setup_demo_minimal.py  subida_masiva_app.py  subir_imagenes_nueva_fuente.py  upload_images.py
scripts/legacy/: dividir_clases.py  eliminar_nombre.py  (+2 more)
server/: DOCKER.md  README.md  README_ES.md  generate_certificates.py  run_server.cmd  run_server.sh  validate_setup.py
src/: campos.json  clases.json  clases_a_rellenar.xlsx  clases_combinadas.json  clases_peligro.json  clases_separadas.json  codigos_tipo_datos  etiquetas.json  etiquetas_agronomos.json  formatos.json
utils/: add_class.py  auth.py  data.py  database.py  device.py  io.py  model.py  process_imported_images.py  segment_leaves.py  setup_bbdd.py  train.py  upload_images.py  upload_images2.py
(+5 files in other folders)
